2011-01-03  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/46801
	* gnat.dg/pack9.adb: Remove xfail.

2011-01-03  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/46984
	* g++.dg/ipa/pr46984.C: New test.

2011-01-02  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/46408
	* gfortran.dg/class_19.f03: Adjust counting of __builtin_free.

2011-01-02  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/47140
	* gcc.c-torture/compile/pr47140.c: New test.

	PR rtl-optimization/47028
	* gcc.dg/pr47028.c: New test.

2011-01-02  Nicola Pero  <nicola.pero@meta-innovation.com>

	* objc.dg/protocol-forward-1.m: Removed TODO.
	* objc.dg/protocol-forward-2.m: New.
	* obj-c++.dg/protocol-forward-2.mm: Removed TODO.
	* obj-c++.dg/protocol-forward-2.mm: New.

2011-01-01  Kai Tietz  <kai.tietz@onevision.com>

	PR target/38662
	* g++.dg/eh/pr38662.C: New testcase.

2011-01-01  Chung-Lin Tang  <cltang@codesourcery.com>

	* gcc.target/arm/vfp-1.c (test_ldst): Fixed fsts test to
	scan for newline '\n'.


Copyright (C) 2011 Free Software Foundation, Inc.

Copying and distribution of this file, with or without modification,
are permitted in any medium without royalty provided the copyright
notice and this notice are preserved.